# Pompompurin_memory_mcp

./: .dockerignore  .env.chromadb  BUILD_SPEED_OPTIMIZATION.md  CLEANUP_SUMMARY.md  DOCKERFILE_FIXES.md  DOCKER_BUILDKIT_GUIDE.md  DOCKER_MICROMAMBA_GUIDE.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  run-chromadb.sh  test_setup.py
src/: main.py  main_chromadb.py  utils.py  utils_chromadb.py
